re PR c++/15774 (Conflicting function decls not diagnosed)

2010-12-25  Kai Tietz  <kai.tietz@onevision.com>

	PR c++/15774
	* decl.c (decls_match): Check for FUNCTION_DECL
	also for identity of compatible attributes.


ChangeLog gcc/testsuite

2010-12-25  Kai Tietz  <kai.tietz@onevision.com>

	PR c++/15774
	* g++.dg/warn/pr15774-1.C: New test.
	* g++.dg/warn/pr15774-2.C: New test.

From-SVN: r168241